# ztfstarflats

./: README.md  setup.cfg  setup.py
starflats/: color_starflat_model.py  compare_models.py  concat_sequences.py  deploy.py  extract_measures  extract_measures.py  first_model.py  full_starflat_model.py  linearmodels.py  mask.py  models.py  readme.md  register_models.py  robuststat.py  selinv.py  simple_starflat_model.py  starflat  starflat_all_models.sh  starflat_all_photometry.sh  starflat_orig.py  summary_measures.py  utils.py  zp_starflat_model.py
