[metadata]
name = starflats
version = attr: starflats.__version__
description = fit of the ZTF focal plane uniformity map
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Regnault, Leander Lacroix et al
author_email = nicolas.regnault@lpnhe.in2p3.fr
license = Apache Software License
license_files = LICENSE
url = https://github.com/nregnault/ztfstarflats
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    importlib_resources; python_version < '3.9'  # not needed from 3.10

    # basic
    numpy
    pandas
    scipy

    # Astro
    # astropy


# [options.package_data]
# starflats = data/*, data/*/*, data/*/*/*
